# ncms

./: .gitignore  .vulture_whitelist.py  CLAUDE.md  README.md  build_run_demo.sh  pyproject.toml
adapters/: README.md
adapters/corpora/: adversarial_train_clinical.jsonl  adversarial_train_conversational.jsonl  adversarial_train_software_dev.jsonl  gold_shape_intent_clinical.jsonl  gold_shape_intent_software_dev.jsonl  gold_software_dev.jsonl  gold_swe_diff.stats.json  sdg_clinical.jsonl  sdg_conversational.jsonl  sdg_software_dev.jsonl
adapters/taxonomies/: clinical.yaml  conversational.yaml  software_dev.yaml  swe_diff.yaml
benchmarks/: .gitignore  README.md  __init__.py  __main__.py  audit_grammar_paths.py  audit_head_quality.py  audit_ingest_trace.py  audit_predictions_diff.py  audit_query_trace.py  audit_vocab_quality.py  compare_phases.sh  configs.py  datasets.py  dream_harness.py  dream_report.py  env.py  experiment_splade_v3.py  harness.py  intent_slot_adapter.py  metrics.py  profile_pipeline.py  profile_store.py  report.py  run.sh  run_ablation.py  run_dream.py  run_dream.sh  run_dream_parallel.sh  run_dream_test13.sh  run_parallel.sh  run_phase.sh  run_phase0.sh  run_swebench.py  run_swebench.sh  run_test13.sh  smoke_test.py  swebench_analysis.py  swebench_configs.py  swebench_harness.py  swebench_qrels.py  (+4 more)
benchmarks/_archive/: experiment_splade_v3.py  test_cooccurrence_edges.py
benchmarks/baselines/: __init__.py  letta_harness.py  mem0_harness.py  run_comparison.py
benchmarks/beir/: README.md  __init__.py  harness.py  run.sh  run_ablation.py  run_parallel.sh  run_test13.sh
benchmarks/core/: __init__.py  configs.py  datasets.py  qa_metrics.py  rag_pipeline.py  report.py  runner.py
benchmarks/dream/: README.md  __init__.py  configs.py  harness.py  report.py  run_dream.py  run_dream.sh  run_dream_parallel.sh  run_dream_test13.sh
benchmarks/hub_replay/: README.md  __init__.py  (+4 more)
docs/: ablation-study-design.md  add-a-domain.md  crewai-ncms-research.md  dashboard-evolution-design-audit.md  dashboard-evolution-design.md  design-query-performance.md  document-intelligence-design.md  fitness-functions.md  graph-enhanced-retrieval.md  intent-slot-distillation-findings.md  intent-slot-distillation.md  intent-slot-sprint-4-findings.md  mseb-results.md  multi-agent-orchestration-design.md  ncms-design-spec.md  ncms-resilience-update.md  ncms_next_internal_design_spec.md  ncms_v1.md  nemoclaw-integration-design.md  nemoclaw-nat-quickstart.md  nemoclaw-nat-step-by-step.md  nemoclaw-quickstart.md  p1-experiment-diary.md  p1-measurement.md  p1-plan.md  p1-temporal-experiment.md  p1-temporal-findings.md  p2-plan.md  p3-state-evolution-benchmark.md  p3-swe-state-benchmark.md  paper.md  quickstart.md  research-longmemeval-temporal.md  swebench-experiment-design.md  temporal-linguistic-geometry.md  tlg-scale-validation.md  tlg-validation-findings.md  v9-mseb-slm-lift-findings.md
tests/: conftest.py
(+1080 files in other folders)
