[project]
name = "ncms"
version = "0.1.0"
description = "NeMo Cognitive Memory System - Vector-free persistent cognitive memory for AI agents"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Shawn McCarthy", email = "shawn@mccarthysoftware.com" }
]
requires-python = ">=3.12"
keywords = ["ai", "agents", "memory", "mcp", "cognitive", "knowledge-graph", "nemo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "aiosqlite>=0.20,<1.0",
    "tantivy>=0.22,<1.0",
    "networkx>=3.2,<4.0",
    "mcp[cli]>=1.9,<2.0",
    "click>=8.1,<9.0",
    "rich>=13.7,<14.0",
    "litellm>=1.40,<2.0",
    "anyio>=4.3,<5.0",
    "gliner>=0.2.10,<1.0",
    "sentence-transformers>=5.0,<6.0",
    "json-repair>=0.39,<1.0",
    "dateparser>=1.2,<2.0",
    "snowballstemmer>=2.2,<3.0",
    "arxiv>=2.4.1",
    "bcrypt>=5.0.0",
    "pyjwt>=2.11.0",
    "langchain-openai>=1.1.11",
    "langchain-nvidia-ai-endpoints>=1.2.1",
    "peft>=0.14,<1.0",
]

[project.optional-dependencies]
docs = [
    "markitdown[docx,pptx,xlsx,pdf]>=0.1.5,<1.0",
]
dashboard = [
    "starlette>=0.37,<1.0",
    "uvicorn>=0.29,<1.0",
]
watch = [
    "watchdog>=4.0,<6.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-http>=1.20",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "prometheus-client>=0.20,<1.0",
]
nat = [
    "nvidia-nat>=1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.9,<2.0",
    "ruff>=0.3,<1.0",
]

[project.scripts]
ncms = "ncms.interfaces.cli.main:cli"
# Archived to src/ncms/experimental/ (2026-04-12):
# ncms-commit-hook = "ncms.interfaces.cli.commit_hook:main"
# ncms-context-loader = "ncms.interfaces.cli.context_loader:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.5",
    "mypy>=1.10",
    # Fitness-function toolchain — imported by tests/architecture/.
    "radon>=6.0,<7.0",
    "vulture>=2.16,<3.0",
]
bench = [
    "datasets>=2.0",
    "letta>=0.16.6",
    "matplotlib>=3.8",
    "mem0ai>=1.0.7",
    "openai>=2.26.0",
    "tabulate>=0.9",
]
